refactor(tests): simplify assertions and remove redundant test setups
- Consolidated repeated assertions using `satisfies` for improved readability.
- Replaced explicit null checks with more concise methods like `contains()` and `isZero()`.
- Removed unnecessary nested test classes and redundant equality tests.
- Simplified SonarLint setup by removing consolidated report task and updating dependencies.